<resources>
    <string name="app_name">AppErasmus</string>
    <string name="etEmail">Email</string>
    <string name="etContraseña">Contraseña</string>
    <string name="botonLogin">Login</string>
    <string name="botonRegistro">Registro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toastMain">No se ha podido conectar. Revisa tus credenciales</string>
    <string name="validacionMain">Rellene los campos</string>
    <string name="etDni">DNI del alumno:</string>
    <string name="etEstudios">Estudios cursados por el alumno:</string>
    <string name="etNombreAlumno">Nombre del alumno:</string>
    <string name="etPracticas">Periodo de practicas del alumno:</string>
    <string name="etNumHoras">Numero de horas de practicas que realizara el alumno:</string>
    <string name="etEmailInsti">Email del instituto del alumno:</string>
    <string name="etNombreInsti">Nombre del instituto del alumno:</string>
    <string name="etTutorInsti">Nombre del tutor del alumno en el instituto:</string>
    <string name="etNombreEmpresa">Nombre de la empresa de las practicas:</string>
    <string name="etTutorEmpresa">Nombre del tutor del alumno en la empresa de practicas:</string>
    <string name="etEmailAlumno">Email para uso de la app del alumno:</string>
    <string name="etPaswAlumno">Contraseña que usara el alumno en la app:</string>
    <string name="etPaswAlumno2">Repita la contraseña para confirmar:</string>
    <string name="etDatos1"><b>Introduzca a continuacion los datos del alumno en practicas</b>\n</string>
    <string name="etDatos2"><b>Introduzca a continuacion los datos del instituto del alumno en practicas\n</b></string>
    <string name="etDatos3"><b>Introduzca a continuacion los datos de la empresa\n</b></string>
    <string name="etDatos4"><b>Introduzca a continuacion los datos de login del alumno en practicas para uso de la app\n</b></string>
    <string name="etDatos1_1"><b>Datos del alumno en practicas:</b>\n</string>
    <string name="etDatos2_1"><b>Datos del instituto del alumno en practicas:\n</b></string>
    <string name="etDatos3_1"><b>Datos de la empresa:\n</b></string>
    <string name="etDatos4_1"><b>Datos de login del alumno en practicas para uso de la app\n</b></string>
    <string name="vacio"> </string>
    <string name="botonCancelar">Cancelar</string>
    <string name="botonCrear">Crear</string>
    <string name="botonModificar">Modificar</string>
    <string name="parentesis1">(</string>
    <string name="parentesis2">)</string>
    <string name="barraLat">/</string>
    <string name="inicioSesion">Sesion iniciada como:</string>
    <string name="etPaginas">Numero de paginas restantes para acabar de evaluar</string>
    <string name="botonAtras">Atras</string>
    <string name="botonSiguiente">Siguiente</string>
    <string name="botonFinalizar">Finalizar</string>
    <string name="botonChat">Escribir mensaje</string>
    <string name="contadorPaginas">1</string>
    <string name="contadorPaginas2">5</string>
    <string name="tvMensaje">Escriba su mensaje</string>
    <string name="botonEnviarMensaje">Enviar</string>
    <string name="menuMensaje">Mensajes</string>
    <string name="menuAlumnos">Alumnos</string>
    <string name="menuAñadir">Añadir alumno</string>
    <string name="menuEvaluar">Evaluar</string>
    <string name="menuSalir">Salir</string>
    <string name="saltoLinea">\n</string>
    <string name="toastEvaluacion">Esta en la primera pagina</string>
    <string name="toastNuevoAlumno">Las contraseñas no coinciden</string>
    <string name="toastNuevoAlumno2">Usuario añadido</string>
    <string name="toastNuevoAlumno3">Datos del alumno modifacados</string>
    <string name="toastNuevoAlumno4">Rellene los datos</string>
    <string name="toastNuevoAlumno5">Error en los datos de login</string>
    <string name="toastNuevoAlumno6">El DNI no es valido</string>
    <string name="toastEnviarMensaje">Mensaje enviado</string>
    <string name="toastMainEt">Complete todos los campos</string>
    <string name="toastMensajeVacio">Escriba su mensaje</string>
    <string name="etPeriodoPracticas">dd/mm/yyyy a dd/mm/yyyy</string>
    <string name="etPassword1">Minimo 6 caracteres</string>
    <!--Strings parte alumno -->
    <string name="menuNuevoMensajeAlumno">Escribir mensaje</string>
    <string name="tvFecha">Introduzca la fecha actual</string>
    <string name="tvHora">Introduzca la hora de entrada</string>
    <string name="tvHora2">Introduzca la hora de salida</string>
    <string name="tvReporte">Introduzca el reporte</string>
</resources>
