<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FichaVerAlumno">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--DATOS DEL ALUMNO-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etDatos1_1"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/etDni"/>

            <TextView
                android:id="@+id/tvDniAlumno2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etNombreAlumno"/>
            <TextView
                android:id="@+id/tvNombreAlumno2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etEstudios"/>
            <TextView
                android:id="@+id/tvEstudiosAlumno2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etPracticas"/>
            <TextView
                android:id="@+id/tvPeriPracticas2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etNumHoras"/>
            <TextView
                android:id="@+id/tvNumHoras2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <!--DATOS DEL INSTITUTO-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etDatos2_1"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etNombreInsti"/>
            <TextView
                android:id="@+id/tvNombreInsti2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etEmailInsti"/>
            <TextView
                android:id="@+id/tvEmailInsti2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etTutorInsti"/>
            <TextView
                android:id="@+id/tvTutorInsti2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <!--DATOS DE LA EMPRESA-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etDatos3_1"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etNombreEmpresa"/>
            <TextView
                android:id="@+id/tvNombreEpresa2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etTutorEmpresa"/>
            <TextView
                android:id="@+id/tvTutorEmpresa2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <!--DATOS DEL LOGIN-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etDatos4_1"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etEmailAlumno"/>
            <TextView
                android:id="@+id/tvEmailAlumno2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etPaswAlumno"/>
            <TextView
                android:id="@+id/tvPasswAlumno1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/btnModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange_700"
                android:text="@string/botonModificar"
                android:textColor="@color/white" />
        </LinearLayout>

    </ScrollView>

</FrameLayout>